Server running, stlye does not transfer

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Scientpad Analytics</title>
+  <title>True Customs</title>
 
-  <link rel="stylesheet" href='css/styleWorking.css'>
+  <link rel="stylesheet" href='./css/styleWorking.css'>
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -16,7 +16,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
-  <!-- <link href="css/bootstrap.min.css" rel="stylesheet" /> -->
+  <link href="css/styleWorking.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One" rel="stylesheet">
 
   
@@ -61,7 +61,7 @@
                   </button>
                 </div>
                 <ol class="carousel-content">
-                  <li><img src="./images/other/lou-face.png"></li>
+                  <li><img src="/images/other/lou-face.png"></li>
                   <li><img src="./images/other/woman-face.png"></li>
                   <li><img src="./images/other/galaxy-shoes.png"></li>
                   <li><img src="./images/other/leather-jacket.png"></li>
